ajoute de photo

--- a/frontend/src/app/pages/about/about.component.html
+++ b/frontend/src/app/pages/about/about.component.html
@@ -219,11 +219,11 @@
             </p>
             <div class="flex items-center space-x-4">
               <div class="w-12 h-12 bg-cvac-blue rounded-full overflow-hidden">
-                <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-5.jpg" alt="President" class="w-full h-full object-cover" />
+                <img src="/assets/images/members/ahlem.png" alt="Ahlem ZENATI - Présidente du CVAC" class="w-full h-full object-cover" />
               </div>
               <div>
-                <div class="font-semibold text-cvac-blue">Présidence du CVAC</div>
-                <div class="text-sm text-gray-600">Conseil de la Vie Associative</div>
+                <div class="font-semibold text-cvac-blue">Ahlem ZENATI</div>
+                <div class="text-sm text-gray-600">Présidente du CVAC</div>
               </div>
             </div>
           </div>
