--- a/frontend/src/app/pages/contact/contact.component.html
+++ b/frontend/src/app/pages/contact/contact.component.html
@@ -77,13 +77,15 @@
         <div class="space-y-8">
           <div class="bg-cvac-cream rounded-2xl p-8">
             <h3 class="text-xl font-bold text-cvac-blue mb-2">Email</h3>
-            <a href="mailto:cvac@choisy-le-roi.fr" class="text-cvac-blue font-semibold hover:text-cvac-light-blue">cvac&#64;choisy-le-roi.fr</a>
+            <a href="mailto:cvac.choisy@gmail.com" class="text-cvac-blue font-semibold hover:text-cvac-light-blue">cvac.choisy&#64;gmail.com</a>
           </div>
           
+          <!--
           <div class="bg-white rounded-2xl p-8 shadow-lg">
             <h3 class="text-xl font-bold text-cvac-blue mb-2">Adresse</h3>
             <p class="text-gray-600">Mairie de Choisy-le-Roi<br>Place Gabriel Péri<br>94600 Choisy-le-Roi</p>
           </div>
+          -->
         </div>
       </div>
     </div>
